# rust-vreath-core

./: Cargo.toml  LICENSE  README.md  package.json
js_export/: package.json  rust_vreath_core.d.ts  rust_vreath_core.js  rust_vreath_core_bg.d.ts  rust_vreath_core_bg.js  rust_vreath_core_bg.wasm
src/: crypto.rs  lib.rs  main.rs  types.rs  util.rs
src/zk/: build.rs  mod.rs  prove.rs  util.rs  verify.rs
