[package]
name = "vreath_wasm"
version = "0.1.0"
authors = ["Sora Suegami <suegamisora@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
rand = "0.6"
curve25519-dalek = { version = "1.0.1", features = ["serde"] }
merlin = "1.0.1"
sha2 = "0.8.0"
hex = "0.3.2"
cc = { version = "1.0", features = ["parallel"] }

[dependencies.zkvm]
path = "./slingshot/zkvm"

[dependencies.spacesuit]
path = "./slingshot/spacesuit"

[dependencies.bulletproofs]
git = "https://github.com/dalek-cryptography/bulletproofs"
branch = "develop"
#path = "../../dalek/bulletproofs"
features = ["yoloproofs"]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

