[package]
name = "rust_vreath_core"
version = "0.0.0"
authors = ["Sora Suegami"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
rand = "0.6"
curve25519-dalek = { version = "1.0.1", features = ["serde"] }
merlin = "1.0.1"
sha2 = "0.8.0"
hex = "0.3.2"

[dependencies.zkvm]
path = "./slingshot/zkvm"

[dependencies.spacesuit]
path = "./slingshot/spacesuit"

[dependencies.bulletproofs]
git = "https://github.com/dalek-cryptography/bulletproofs"
branch = "develop"
features = ["yoloproofs"]

